# RAGEvalKit

./: .gitignore  README.md  pyproject.toml  rageval.yaml
.claude/: settings.local.json
.github/workflows/: live-demo.yml  tests.yml
configs/: baseline.yaml  dev.yaml  experiment.yaml
docs/: architecture.md  cli.md  demo_script.md  live_demo.md  metrics.md  mvp_spec.md  rageval_kit_plan.md
evalsets/: demo_openai.jsonl  dev.jsonl
examples/: demo_commands.ps1  demo_live_openai.ps1  demo_live_openai.sh
examples/configs/: demo_openai.yaml
examples/demo-corpus/: 01_rag_evaluation.md  02_rag_failure_modes.md  03_ci_regression_testing.md
examples/tiny-corpus/: doc1.md  doc2.md  doc3.md
prompts/: rag.j2  system.txt
reports/: dev_report.html  live_demo_report.html
src/rageval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: test_cli_ci_check.py  test_cli_compare.py  test_cli_evaluate_answer_relevance.py  test_cli_evaluate_groundedness.py  test_cli_evaluate_retrieval.py  test_cli_extract_claims.py  test_cli_generate_evalset.py  test_cli_ingest_retrieve.py  test_cli_report.py  test_cli_run.py  test_cli_summarize_run.py  test_ingestion_duckdb.py
tests/unit/: test_answer_relevance.py  test_chroma_dao.py  test_chunker.py  test_ci_check.py  test_claim_extraction.py  test_cli_help.py  test_compare.py  test_config.py  test_demo_assets.py  test_duckdb_documents_chunks.py  test_embedder.py  test_evalset_loader.py  test_evalset_synthesize.py  test_groundedness.py  test_ids.py  test_init.py  test_llm.py  test_loader.py  (+6 more)
(+38 files in other folders)
